src/objects/Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Product2id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Strategys</relationshipLabel>
        <relationshipName>Strategys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Strategy_Name__c</fullName>
        <label>Strategy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_price__c</fullName>
        <label>Strategy price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Strategy</label>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>